Se agrega funcionalidad para subir y editar imágenes de productos.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "http://localhost:5129/"
+    "BaseUrl": "https://apiproductos20231127163857.azurewebsites.net/"
   }
 }
