--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -21,9 +21,9 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7256;http://localhost:5193",
+      "applicationUrl": "https://ejemplo120231127164848.azurewebsites.net",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
